--- a/pages/About/about.html
+++ b/pages/About/about.html
@@ -1,5 +1,5 @@
 <psk-page title="PrivateSky  Open Source Platform">
-    <psk-toc title="About"></psk-toc>
+    <psk-toc title="In this section"></psk-toc>
     <psk-img src="/assets/images/privatesky2.png"></psk-img>
     <psk-description>
     PrivateSky open source code was obtained from a research project coordinated by Alexandru Ioan Cuza University from Iasi in collaborations with the following companies: Axiologic Research (original code contributor), Heaven Solutions, Romsoft, Code932, DPO, Space Giant, Junio.
