--- a/pages/About/how-to-write-documentation-pages.html
+++ b/pages/About/how-to-write-documentation-pages.html
@@ -1,5 +1,5 @@
 <psk-page title="How to Write a page on this site">
-  <psk-toc title= "Writing documentation pages"></psk-toc>
+  <psk-toc title= "In this section"></psk-toc>
   <psk-description>
     This  page is short guide for  PrivateSky developers, technical writers, external parteners and intribut contributors
   </psk-description>
