--- a/pages/Cardinal/controllers.html
+++ b/pages/Cardinal/controllers.html
@@ -1,5 +1,5 @@
 <psk-page title="Controllers. How to write controllers. How to use controllers.">
-    <psk-toc title="Controllers"></psk-toc>
+    <psk-toc title="In this section"></psk-toc>
 
     <psk-description>
         <p>This page is intending to display how <strong>Controllers</strong> are written in this framework and the ways of how to use the controllers.</p>
