--- a/pages/Cardinal/models.html
+++ b/pages/Cardinal/models.html
@@ -1,5 +1,5 @@
 <psk-page title="Observable Models">
-  <psk-toc title="Observable Models"></psk-toc>
+  <psk-toc title="In this section"></psk-toc>
   <psk-chapter title="makeObservable">
     <psk-code>
 
