--- a/pages/Cardinal/web-components-mvc.html
+++ b/pages/Cardinal/web-components-mvc.html
@@ -1,5 +1,5 @@
 <psk-page title="CardinalJS a web components MVC framework">
-<psk-toc title="Web components MVC"></psk-toc>
+<psk-toc title="In this section"></psk-toc>
 
 <psk-description>CardinalIJS (or sometimes simply Cardinal) is introducing a programming mode (it is a micro framework) oriented to enable the rapid development of WEB applications (RAD - Rapid Application Development or low code development). Cardinal appeared because of the frustration experienced with other frameworks and it aims at providing a guide  for fast and safe programming of SSApp graphic interface.</psk-description>
 
