--- a/pages/Development/coding-style.html
+++ b/pages/Development/coding-style.html
@@ -1,5 +1,5 @@
 <psk-page title="Coding style">
-  <psk-toc title="Codin style - Table of Contents"></psk-toc>
+  <psk-toc title="In this section"></psk-toc>
 
   <psk-chapter title="Guidelines">
     <div>
