--- a/pages/Development/encrypted-choreographies.html
+++ b/pages/Development/encrypted-choreographies.html
@@ -1,5 +1,5 @@
 <psk-page title="SecurityContext: Encryption in PrivateSky for encrypted choreographies">
-  <psk-toc title="Encrypted-coreographies"></psk-toc>
+  <psk-toc title="In this section"></psk-toc>
   <psk-chapter title="Concepts">
     We proposed the concept of encrypted choreographies as a method to make easy to use cryptography methods with swarms communication.
     <p>Understanding  encrypted choreographies is PrivateSky there are the following concepts:</p>
