--- a/pages/Development/swarm-engine.html
+++ b/pages/Development/swarm-engine.html
@@ -1,5 +1,5 @@
 <psk-page title="Advanced topics">
-    <psk-toc title="Swarm engine"></psk-toc>
+    <psk-toc title="In this section"></psk-toc>
   <psk-chapter title="Strategies in the execution engine of swarms. Blockchain domains in PrivateSky.">
     <p align="justify">All applications developed using PrivateSky technologies will be run in what we call <i>"blockchain domain"</i>. A blockchain domain, it is an environment for running internal DSL JavaScript code for swarms.</p>
     <p>Our research has identified 4 PrivateSky domains, as can be seen in the following figure:</p>
