--- a/pages/Development/syndicate.html
+++ b/pages/Development/syndicate.html
@@ -1,5 +1,5 @@
 <psk-page title="Syndicate introduction">
-    <psk-toc title="Syndicate - Table of Contents"></psk-toc>
+    <psk-toc title="In this section"></psk-toc>
     <psk-description>
         <p>
             This module exposes an interface able to create pools of customizable native or secure workers.
