--- a/pages/EDFS/brick-archives.html
+++ b/pages/EDFS/brick-archives.html
@@ -1,5 +1,5 @@
 <psk-page title="Brick Archives">
-    <psk-toc title="Brick Archives"></psk-toc>
+    <psk-toc title="In this section"></psk-toc>
     <psk-chapter title="Introduction">
         <p allign="justify">In order to overcome some of the limitations (such as the inability to stream) of the
             existent archiving protocols (such as zip), PrivateSky created its own archiving protocol, BAR (Brick
