--- a/pages/EDFS/ssapps.html
+++ b/pages/EDFS/ssapps.html
@@ -1,5 +1,5 @@
 <psk-page title="SSApps Explained">
-	<psk-toc title="SSApps Explained"></psk-toc>
+	<psk-toc title="In this section"></psk-toc>
 	
   <psk-chapter title="Privacy focused DApps">
     <p align="justify">A SSApp (self-sovereign app) aims at giving control back to the user. An instance of a SSApp is solely under the cryptographic control of the user. The existence of a SSApp instance, as well as the possibility to see and modify its content is strictly limited by the access to the SEED of a CSB. The networking, the blockchain where the CSBs get anchored or the cloud storages  where Bricks get stored don’t know anything about the  types of the SSApps application or their content.</p>
