--- a/pages/PrivateSky/architecture.html
+++ b/pages/PrivateSky/architecture.html
@@ -1,6 +1,6 @@
 
 <psk-page title="Blockchain architecture">
-  <psk-toc title="Arhitecture"></psk-toc>
+  <psk-toc title="In this section"></psk-toc>
 
   <psk-chapter title="Hierarchical Blockchain Domains">
     <psk-chapter title="Heterogeneous Blockchain Domains">
