--- a/pages/PrivateSky/interactions.html
+++ b/pages/PrivateSky/interactions.html
@@ -1,5 +1,5 @@
 <psk-page title="Interaction concept">
-  <psk-toc title="Interaction concept"></psk-toc>
+  <psk-toc title="In this section"></psk-toc>
   <psk-chapter title="Interactions: swarms sent to clients and recieved back ">
      Typically a swarm (as a choreography) or as a blockchain transaction is started in a different application from the place where is executed. Typically a client is starting swarms or transaction on a remote node.
     The swarm communication paradigms is trying to go beyond the request/answer pattern of the client/server (RPC) paradigm while still keeping things simple for programmers.
