--- a/pages/Tools/pskdomain.html
+++ b/pages/Tools/pskdomain.html
@@ -1,5 +1,5 @@
 <psk-page title="PSKDOMAIN command">
-    <psk-toc title="pskdomain command"></psk-toc>
+    <psk-toc title="In this section"></psk-toc>
     <psk-chapter title="Summary">
       <psk-card>
         <b>pskdomain</b> [-option]
