--- a/pages/forms/psk-date-input.html
+++ b/pages/forms/psk-date-input.html
@@ -1,6 +1,6 @@
 <psk-page title="Psk-Date-Input Component">
 
-    <psk-toc title="Table of Contents">
+    <psk-toc title="In this section">
     </psk-toc>
 
     <psk-description title="Definition">
