--- a/pages/psk-wiki/psk-card.html
+++ b/pages/psk-wiki/psk-card.html
@@ -1,6 +1,6 @@
 <psk-page title="psk-card">
 
-    <psk-toc title="PSK Card">
+    <psk-toc title="In this section">
     </psk-toc>
 
     <psk-description>
