--- a/pages/psk-wiki/psk-description.html
+++ b/pages/psk-wiki/psk-description.html
@@ -1,6 +1,6 @@
 <psk-page title="psk-description">
 
-    <psk-toc title="PSK Description">
+    <psk-toc title="In this section">
     </psk-toc>
 
     <psk-description>
