--- a/pages/psk-wiki/psk-link.html
+++ b/pages/psk-wiki/psk-link.html
@@ -1,6 +1,6 @@
 <psk-page title="psk-link">
 
-    <psk-toc title="PSK Link">
+    <psk-toc title="In this section">
     </psk-toc>
 
     <psk-description>
