--- a/pages/psk-wiki/psk-page.html
+++ b/pages/psk-wiki/psk-page.html
@@ -1,6 +1,6 @@
 <psk-page title="psk-page">
 
-    <psk-toc title="PSK Page"></psk-toc>
+    <psk-toc title="In this section"></psk-toc>
 
     <psk-description>
         <p>This component is the most important component for documentation as it renders the entire page.</p>
