--- a/pages/psk-wiki/psk-toc.html
+++ b/pages/psk-wiki/psk-toc.html
@@ -1,6 +1,6 @@
 <psk-page title="psk-toc">
 
-    <psk-toc title="PSK Table of Content">
+    <psk-toc title="In this section">
     </psk-toc>
 
     <psk-description>
