--- a/pages/web-components/attachments-list.html
+++ b/pages/web-components/attachments-list.html
@@ -1,6 +1,6 @@
 <psk-page title="psk-attachments-list">
 
-    <psk-toc title="PSK Attachments List"></psk-toc>
+    <psk-toc title="In this section"></psk-toc>
 
     <psk-description>
         <p>This component is intended to display a list of files with the possibility to download them.</p>
