--- a/pages/web-components/feedback-list.html
+++ b/pages/web-components/feedback-list.html
@@ -1,6 +1,6 @@
 <psk-page title="psk-list-feedbacks">
 
-    <psk-toc title="PSK Feedback Pool "></psk-toc>
+    <psk-toc title="In this section"></psk-toc>
 
     <psk-description>
         <p>This componentent is intended to be used as a notification pool in order to keep the user experince more to
