--- a/pages/web-components/files-chooser.html
+++ b/pages/web-components/files-chooser.html
@@ -1,6 +1,6 @@
 <psk-page title="psk-files-chooser">
 
-    <psk-toc title="PSK Files Chooser"></psk-toc>
+    <psk-toc title="In this section"></psk-toc>
 
     <psk-description>
         This component allows the user to select multiple files from his device to load them into the application
