--- a/pages/web-components/floating-menu.html
+++ b/pages/web-components/floating-menu.html
@@ -1,6 +1,6 @@
 <psk-page title="psk-floating-menu">
 
-    <psk-toc title="PSK Floating Menu "></psk-toc>
+    <psk-toc title="In this section"></psk-toc>
 
     <psk-description>
         <p>This component is providing page options in a Floating Menu style.</p>
