--- a/pages/web-components/grid.html
+++ b/pages/web-components/grid.html
@@ -1,6 +1,6 @@
 <psk-page title="psk-grid">
 
-    <psk-toc title="PSK Grid">
+    <psk-toc title="In this section">
     </psk-toc>
 
     <psk-description>
