--- a/pages/web-components/icon.html
+++ b/pages/web-components/icon.html
@@ -1,6 +1,6 @@
 <psk-page title="psk-icon">
 
-    <psk-toc title="PSK Icon"></psk-toc>
+    <psk-toc title="In this section"></psk-toc>
 
     <psk-description>
         <p>This component will render an icon so the information passed along can be more expressive and the user
