--- a/pages/web-components/modal.html
+++ b/pages/web-components/modal.html
@@ -1,6 +1,6 @@
 <psk-page title="psk-modal">
 
-    <psk-toc title="PSK Modal"></psk-toc>
+    <psk-toc title="In this section"></psk-toc>
 
     <psk-description>
         <p>This component is intended to be used when a modal is needed in the application.</p>
