--- a/pages/web-components/pin-popup.html
+++ b/pages/web-components/pin-popup.html
@@ -1,6 +1,6 @@
 <psk-page title="psk-pin-popup">
 
-    <psk-toc title="PSK Pin Popup"></psk-toc>
+    <psk-toc title="In this section"></psk-toc>
 
     <psk-description>
         <p>This component is intended to be used when a PIN is required from the user.</p>
