--- a/pages/web-components/slideshow.html
+++ b/pages/web-components/slideshow.html
@@ -1,6 +1,6 @@
 <psk-page title="psk-slideshow">
 
-    <psk-toc title="PSK Slideshow"></psk-toc>
+    <psk-toc title="In this section"></psk-toc>
 
     <psk-description>
         <p>This components purpose is to create a slideshow of images using a given images source string:
