--- a/pages/web-components/ui-loader.html
+++ b/pages/web-components/ui-loader.html
@@ -1,6 +1,6 @@
 <psk-page title="psk-ui-loader">
 
-    <psk-toc title="PSK User Interface Loader"></psk-toc>
+    <psk-toc title="In this section"></psk-toc>
 
 
     <psk-description>
