--- a/pages/web-components/user-profile.html
+++ b/pages/web-components/user-profile.html
@@ -1,6 +1,6 @@
 <psk-page title="psk-user-profile">
 
-    <psk-toc title="PSK User Profile"></psk-toc>
+    <psk-toc title="In this section"></psk-toc>
 
     <psk-description>
         <p>This component is intended to be used to show some user information.</p>
