--- a/pages/EDFS/edfs.html
+++ b/pages/EDFS/edfs.html
@@ -1,6 +1,6 @@
 <psk-page title="EDFS Explained">
 
-<psk-toc title="EDFS Explained"></psk-toc>
+<psk-toc title="In this section"></psk-toc>
 
 <psk-chapter title="Abstract">	
 <p align="justify">The PrivateSky’s EDFS subproject aims at implementing a distributed file system named EDFS (Encrypted Distributed File System). The folders in this file system may be of two categories: BARs and CSBs. a CSB is a special category of BAR, as may be observed on the corresponding page. The files in EDFS are are simply encrypted files stored in the cloud, without the storage service to be able to access the encryption keys.</p>
