--- a/pages/Tools/bar.html
+++ b/pages/Tools/bar.html
@@ -1,5 +1,5 @@
 <psk-page title="BAR command">
-    <psk-toc title="bar command"></psk-toc>
+    <psk-toc title="In this section"></psk-toc>
     <psk-chapter title="Summary">
         <psk-card>
             <b> bar </b> [-option] [-modifier]
