--- a/pages/forms/psk-form.html
+++ b/pages/forms/psk-form.html
@@ -1,6 +1,6 @@
 <psk-page title="Psk-Form Component">
 
-    <psk-toc title="Table of Contents">
+    <psk-toc title="In this section">
     </psk-toc>
 
     <psk-description>
