--- a/pages/forms/psk-radio.html
+++ b/pages/forms/psk-radio.html
@@ -1,6 +1,6 @@
 <psk-page title="Psk-Radio">
 
-    <psk-toc title="Table of Contents">
+    <psk-toc title="In this section">
     </psk-toc>
 
     <psk-description title="Definition and usage">
