--- a/pages/forms/using-forms.html
+++ b/pages/forms/using-forms.html
@@ -1,6 +1,6 @@
 <psk-page title="Using Forms with Models and Templates">
 
-    <psk-toc title="Table of Contents">
+    <psk-toc title="In this section">
     </psk-toc>
 
     <psk-description title="Summary">
