--- a/pages/psk-wiki/psk-copy-clipboard.html
+++ b/pages/psk-wiki/psk-copy-clipboard.html
@@ -1,6 +1,6 @@
 <psk-page title="psk-copy-clipboard">
 
-    <psk-toc title="PSK Copy Clipboard">
+    <psk-toc title="In this section">
     </psk-toc>
 
     <psk-description>
