--- a/pages/psk-wiki/psk-example.html
+++ b/pages/psk-wiki/psk-example.html
@@ -1,6 +1,6 @@
 <psk-page title="psk-example">
 
-    <psk-toc title="PSK Example">
+    <psk-toc title="In this section">
     </psk-toc>
 
     <psk-description>
