--- a/pages/web-components/app-menu.html
+++ b/pages/web-components/app-menu.html
@@ -2,7 +2,7 @@
 
   
 
-  <psk-toc title="PSK Application Menu"></psk-toc>
+  <psk-toc title="In this section"></psk-toc>
 
   <psk-description>
     <p>This component is providing the application navigation.</p>
