--- a/pages/web-components/toolbar.html
+++ b/pages/web-components/toolbar.html
@@ -1,6 +1,6 @@
 <psk-page title="psk-toolbar">
 
-    <psk-toc title="PSK Toolbar">
+    <psk-toc title="In this section">
     </psk-toc>
 
     <psk-description>
