--- a/pages/web-components/wizard.html
+++ b/pages/web-components/wizard.html
@@ -1,6 +1,6 @@
 <psk-page title="psk-wizard">
 
-    <psk-toc title="PSK Wizard"></psk-toc>
+    <psk-toc title="In this section"></psk-toc>
     <psk-description>
         <p>Private Sky Wizard component.</p>
         <p>This component will be able to display a list of steps for a certain behavior needed in the application.</p>
