--- a/pages/PrivateSky/interactions.html
+++ b/pages/PrivateSky/interactions.html
@@ -6,6 +6,13 @@
     Even in a simple setup involving communication between two parties the same communication process (lets call them client and server for simplicity) could involve a multi-step communication between client and server.
     For example, the server could require additional information from the client (for example input of a secret key)  continue with processing an additional steps ( phases) and then returning some results.
       <psk-img src="assets/images/newlook/csinteraction.png" title="Typical communication pattern requiring interactions"></psk-img>
+      <psk-list list-type="ordered">
+      Client asking a service from a server (startSwarm primitive used in client)
+      Phase execution between some servers (swarm primitive called in servers)
+      Server sending a phase to the client (interaction phase)
+      Client sending a phase back to server (swarm primitive in interaction)
+      Result phase sent from server to client (home primitive)
+      </psk-list>
   </psk-chapter>
 
   <psk-chapter title="Benefits of the interactions">
